--- a/css/_type.scss
+++ b/css/_type.scss
@@ -1,3 +1,48 @@
-h1{
-  color: red;
+
+/*variables*/
+$heading-font-family: sans-serif;
+$heading-font-weight: "bold";
+$fixed-font-family: sans-serif;
+$fixed-font-size: 100%;
+$fixed-line-height: 1.6;
+$quiet-color: lightgrey;
+$loud-color: steelblue;
+$text-color: #333;
+$base-font-size: 1em;
+$base-font-family: sans-serif;
+$base-font-weight: normal;
+/*end variables*/
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  text-align: center;
+  font-family: $heading-font-family;
+  font-weight: $heading-font-weight; }
+.h1, .h2 { line-height: 1.1; }
+.h3, .h4 { line-height: 1.3; }
+.h1 { font-size: 400%; letter-spacing: -2px; }
+.h2 { font-size: 250%; letter-spacing: -1px; }
+.h3 { font-size: 200%; }
+.h4 { font-size: 180%; }
+.h5 { font-size: 130%; }
+
+.fixed { font-family: $fixed-font-family; font-size: $fixed-font-size; line-height: $fixed-line-height; }
+
+.quiet { font-color: $quiet-color; }
+.loud  { font-color: $loud-color; }
+.center { text-align: center; margin: 0 auto}
+
+.italic { font-style: italic; }
+.bold   { font-weight: 700; @extend .loud; }
+
+.block-margins { margin: 1em 0; }
+
+.unordered-list { list-style-type: disc; }
+.ordered-list { list-style: decimal; }
+
+
+body {
+  color: $text-color;
+  font-size: $base-font-size;
+  font-family: $base-font-family;
+  font-weight: $base-font-weight;
+  line-height: 1.6;
 }
