--- a/css/_components.scss
+++ b/css/_components.scss
@@ -17,6 +17,13 @@
    background: $white;
    position: relative;
 }
+.pig-latin-input{
+  border: none;
+  transition: background-color .5s ease-in-out;
+}
+.pig-latin-input:focus{
+  background-color: lighten($light-base-complement, 15%);
+}
 .bubble:after{
   content: '';
   position: absolute;
@@ -32,6 +39,8 @@
 .bubble-animation{
   animation: fade-in .8s ease-in-out, bounce-in .5s ease-in;
 }
+
+
 @keyframes fade-in {
   from {
     opacity: 0;
