--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -6,6 +6,7 @@ form, div{
 }
 input, label, button{
   align-self:stretch;
-  padding: 1em;
+  padding: .5em;
   margin: .5em;
+  border-radius: .5em;
 }
